web/book/tests/snapshots/snapshot__language-features__coalesce-0.snap
---
source: web/book/tests/snapshot.rs
expression: "from orders\nderive amount ?? 0\n"
---
SELECT
  *,
  COALESCE(amount, 0)
FROM
  orders

