web/book/tests/snapshots/snapshot__language-features__regex-3.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.postgres\n\nfrom tracks\nfilter (name ~= \"\\\\(I Can't Help\\\\) Falling\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP_LIKE(name, '\(I Can''t Help\) Falling')

